add animation to bar stats

--- a/views/index.html
+++ b/views/index.html
@@ -31,12 +31,12 @@
                 <th class="p-3 w-40"><i data-lucide="swords" class="inline w-4 h-4 mr-2"></i>Kills</th>
                 <th class="p-3 w-40"><i data-lucide="heart-minus" class="inline w-4 h-4 mr-2"></i>Team-Kills</th>
                 <th class="p-3 w-40"><i data-lucide="skull" class="inline w-4 h-4 mr-2"></i>Tode</th>
-                <th class="p-3 w-28 text-center"><i data-lucide="divide" class="inline w-4 h-4 mr-2"></i>K/D</th>
-                <th class="p-3 w-40 text-center"><i data-lucide="trophy" class="inline w-4 h-4 mr-2"></i>Siege</th>
-                <th class="p-3 w-40 text-center"><i data-lucide="shield-off" class="inline w-4 h-4 mr-2"></i>Losses</th>
+                <th class="p-3 w-28"><i data-lucide="divide" class="inline w-4 h-4 mr-2"></i>K/D</th>
+                <th class="p-3 w-40"><i data-lucide="trophy" class="inline w-4 h-4 mr-2"></i>Siege</th>
+                <th class="p-3 w-40"><i data-lucide="shield-off" class="inline w-4 h-4 mr-2"></i>Losses</th>
                 <th class="p-3 w-40"><i data-lucide="flame" class="inline w-4 h-4 mr-2"></i>Schaden</th>
                 <th class="p-3 w-40"><i data-lucide="user-x" class="inline w-4 h-4 mr-2"></i>Teamschaden</th>
-                <th class="p-3 w-40 text-center"><i data-lucide="ghost " class="inline w-4 h-4 mr-2"></i>Traitor</th>
+                <th class="p-3 w-40"><i data-lucide="ghost " class="inline w-4 h-4 mr-2"></i>Traitor</th>
                 <th class="p-3 w-40"><i data-lucide="pie-chart" class="inline w-4 h-4 mr-2"></i>Winrate</th>
             </tr>
             </thead>
@@ -45,9 +45,13 @@
     </div>
 
     <div class="mb-8">
-        <h2 class="text-xl font-semibold mb-2">🎙️ Spieler im Voice</h2>
+        <h2 class="text-xl font-semibold mb-2">🎙️ Spieler im Discord</h2>
         <div id="voiceList" class="space-y-2 text-sm"></div>
     </div>
+
+    <h2 class=" text-xl font-semibold mb-2 flex items-center gap-2">
+        <i data-lucide="link-2" class="w-6 h-6"></i> Spieler ↔ Discord-Bindings
+    </h2>
 
     <div class="mb-6">
         <input id="search" placeholder="🔍 Suche..." class="w-full bg-slate-800 p-2 rounded-lg text-white"/>
