adjust width of name column

--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
             <thead>
             <tr class="text-slate-300">
                 <th class="p-3 w-12 text-center">Rang</th>
-                <th class="p-3">Name</th>
+                <th class="p-3 w-40">Name</th>
                 <th class="p-3 w-40"><i data-lucide="swords" class="inline w-4 h-4 mr-2"></i>Kills</th>
                 <th class="p-3 w-40"><i data-lucide="heart-minus" class="inline w-4 h-4 mr-2"></i>Team-Kills</th>
                 <th class="p-3 w-40"><i data-lucide="skull" class="inline w-4 h-4 mr-2"></i>Tode</th>
